Set project config

--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <title>Fylo</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+            href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Raleway:ital,wght@0,400;0,700;1,400&display=swap"
+            rel="stylesheet"
+    />
 </head>
 <body>
-    <h1 class="text-cyan-700 uppercase text-5xl">Hello</h1>
+    <h1 class="text-cyan-700 uppercase text-5xl dark:bg-black">Hello251234</h1>
 </body>
 </html>
