--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
 <head>
     <meta charset="UTF-8">
     <title>Fylo</title>
@@ -30,7 +30,7 @@
 <header class="container mx-auto mt-10 px-6 text-center h-40 md:h-20">
     <div class="bg-logo-light-mode dark:bg-logo-dark-mode bg-no-repeat h-20 w-48 mx-auto md:mx-0 md:absolute top-10 left-10"></div>
 
-    <div class="flex items-center justify-center space-x-4 md:space-x-10 md:absolute top-12 rigth-10">
+    <div class="flex items-center justify-center space-x-4 md:space-x-10 md:absolute top-12 right-10">
         <a href="#features" class="hover:text-accentCyan">Features</a>
         <a href="#testimonials" class="hover:text-accentCyan">Testimonials</a>
 
@@ -236,5 +236,56 @@
         </div>
     </div>
 </section>
+
+<footer class="bg-darkBlue2 text-white">
+    <div class="container mx-auto pt-12 px-5 pb-10">
+        <div class="flex flex-col justify-between space-y-24 md:flex-row md:space-y-0">
+            <div class="mt-10 space-y-6">
+                <div class="flex items-center space-x-3 md:-mt-10">
+                    <div class="w-6"><img src="images/icon-phone.svg" alt="" class="scale-10"></div>
+                    <div>+1-543-123-4567</div>
+                </div>
+                <div class="flex items-center space-x-3">
+                    <div class="w-6"><img src="images/icon-email.svg" alt="" class="scale-10"></div>
+                    <div>example@fylo.com</div>
+                </div>
+            </div>
+
+            <div class="flex flex-col space-y-10 text-xl md:text-base md:space-x-20 md:space-y-0 md:flex-row">
+                <div class="flex flex-col space-y-3">
+                    <a href="#">About</a>
+                    <a href="#">Jobs</a>
+                    <a href="#">Press</a>
+                    <a href="#">Blog</a>
+                </div>
+
+                <div class="flex flex-col space-y-3">
+                    <a href="#">Contact Us</a>
+                    <a href="#">Terms</a>
+                    <a href="#">Privacy</a>
+                </div>
+            </div>
+
+            <div class="flex justify-center pb-10 space-x-3">
+                <div>
+                    <a href="#">
+                        <img src="images/facebook.svg" alt="" class="p-2 bg-darkBlue rounded-full ficon">
+                    </a>
+                </div>
+                <div>
+                    <a href="#">
+                        <img src="images/twitter.svg" alt="" class="p-2 bg-darkBlue rounded-full ficon">
+                    </a>
+                </div>
+
+                <div>
+                    <a href="#">
+                        <img src="images/instagram.svg" alt="" class="p-2 bg-darkBlue rounded-full ficon">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
