--- a/public/index.html
+++ b/public/index.html
@@ -240,7 +240,7 @@
 <footer class="bg-darkBlue2 text-white">
     <div class="container mx-auto pt-12 px-5 pb-10">
         <div class="flex flex-col justify-between space-y-24 md:flex-row md:space-y-0">
-            <div class="mt-10 space-y-6">
+            <div class="mt-10 space-y-6 text-center justify-center">
                 <div class="flex items-center space-x-3 md:-mt-10">
                     <div class="w-6"><img src="images/icon-phone.svg" alt="" class="scale-10"></div>
                     <div>+1-543-123-4567</div>
@@ -251,7 +251,7 @@
                 </div>
             </div>
 
-            <div class="flex flex-col space-y-10 text-xl md:text-base md:space-x-20 md:space-y-0 md:flex-row">
+            <div class="flex flex-col space-y-10 text-center text-xl md:text-base md:space-x-20 md:space-y-0 md:flex-row">
                 <div class="flex flex-col space-y-3">
                     <a href="#">About</a>
                     <a href="#">Jobs</a>
